--- a/banner.css
+++ b/banner.css
@@ -8,3 +8,67 @@ body {
   margin: 0;
   padding: 0;
 }
+
+/* Header Banner Part */
+header {
+  background-image: url(icon/Hero-bg.png);
+  max-width: 1440px;
+  margin: auto;
+  height: 652px;
+}
+.banner-container {
+  width: 1000px;
+  height: 580px;
+  margin: 25px 220px 45px 220px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.photo {
+  width: 240px;
+  height: 240px;
+  margin-bottom: 30px;
+}
+.text-1 {
+  font-size: 48px;
+  font-weight: 800;
+  text-align: center;
+  margin-bottom: 25px;
+}
+.text-dark {
+  color: rgba(13, 19, 33, 1);
+}
+.para-1 {
+  text-align: center;
+  margin-bottom: 32px;
+}
+.btn {
+  margin-top: 35px;
+  width: 245px;
+  height: 65px;
+  border-radius: 8px;
+  background-color: rgba(13, 19, 33, 1);
+  font-size: 20px;
+  font-weight: 600;
+  color: #ffffff;
+}
+/* <!-- Why Web Development Part --> */
+
+.drum-1 {
+  max-width: 1140px;
+  height: 1400px;
+  margin: auto;
+  margin-top: 75px;
+  background-color: rgba(13, 19, 33, 0.02);
+  padding: 80px 100px 80px 100px;
+}
+.child-1 {
+  width: 850px;
+  height: 110px;
+  margin: auto;
+}
+.child-1 > h2 {
+  text-align: center;
+  font-size: 32px;
+  font-weight: 800;
+}
